--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,7 +6,6 @@
     padding-top: 40px;
     justify-content: space-between;
     margin: 0 $marginLarge;
-    text-decoration: underline;
     color: red;
 
     img {
@@ -23,17 +22,16 @@
         font-size: 24px;
         font-weight: 500;
         justify-content: space-around;
-        
-
 
         a {
             color: $colorPrimary;
             text-decoration: none;
         }
-        
-        a:hover {
+
+        a.active{
             text-decoration: underline;
         }
+        
     }
 }
 
